retrieveNA31/objects/Core_IPS_File_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Core_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Core_IPS_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IPS File Assignments</relationshipLabel>
        <relationshipName>IPS_File_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Category__c</fullName>
        <description>The File Category value derived from the IPS File Upload Master and displayed on the IPS File Assignments object.</description>
        <formula>TEXT( Core_IPS_File_Upload_Master__r.Core_Category__c )</formula>
        <label>File Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Effective_Date__c</fullName>
        <description>The effective data field value derived from the IPS File Upload Master and displayed on the IPS File Assignments object.</description>
        <formula>Core_IPS_File_Upload_Master__r.Core_Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Expiration_Date__c</fullName>
        <description>The expiration date value derived from the IPS File Upload Master and displayed on the IPS File Assignments object.</description>
        <formula>Core_IPS_File_Upload_Master__r.Core_Expiration_Date__c</formula>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_File_Description__c</fullName>
        <label>File Description</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_File_Name__c</fullName>
        <description>File Name field on the IPS File Assignment object.</description>
        <formula>Core_IPS_File_Upload_Master__r.Core_File_Name__c</formula>
        <label>File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_File_Size__c</fullName>
        <description>The file size field derived from the IPS File Upload Master and displayed on the IPS File Assignments object.</description>
        <formula>Core_IPS_File_Upload_Master__r.Core_File_Size__c</formula>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_File_Upload_Master__c</fullName>
        <label>IPS File Upload Master</label>
        <referenceTo>Core_IPS_File_Upload_Master__c</referenceTo>
        <relationshipLabel>IPS File Assignments</relationshipLabel>
        <relationshipName>IPS_File_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Support_Org_ID__c</fullName>
        <formula>Core_Supported_Product__r.Core_Product_Organization__r.Core_IPS_Support_Org_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Name__c</fullName>
        <formula>Core_Supported_Product__r.Core_Supported_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supported Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supported Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Core_IPS_Supported_Product__c.Core_EOIS__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>1. Search for Supported Product using &quot;All Fields&quot; option
2. Products marked EOIS are not shown by default (click &quot;Show All Results&quot; to clear filter)</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipLabel>IPS File Assignments</relationshipLabel>
        <relationshipName>IPS_File_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Upload_Status__c</fullName>
        <description>The File Upload Status value derived from the IPS File Upload Master and displayed on the IPS File Assignments object.</description>
        <formula>TEXT( Core_IPS_File_Upload_Master__r.Core_Upload_Status__c )</formula>
        <label>Upload Status</label>
        <type>Text</type>
    </fields>
    <label>IPS File Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Core_File_Name__c</columns>
        <columns>Core_File_Description__c</columns>
        <columns>Core_Supported_Product_Name__c</columns>
        <columns>Core_Account__c</columns>
        <columns>Core_Category__c</columns>
        <columns>Core_Effective_Date__c</columns>
        <columns>Core_Expiration_Date__c</columns>
        <columns>Core_File_Size__c</columns>
        <columns>Core_Supported_Product__c</columns>
        <columns>Core_IPS_File_Upload_Master__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>IPS File Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPS File Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Supported_Product_Mandatory</fullName>
        <active>true</active>
        <description>Supported Product is mandatory for records.</description>
        <errorConditionFormula>OR(ISBLANK( Core_Supported_Product__c ) ,ISNULL( Core_Supported_Product__c ))</errorConditionFormula>
        <errorDisplayField>Core_Supported_Product__c</errorDisplayField>
        <errorMessage>Supported Product can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_IPS_Upload_Status_Complete_Allowed</fullName>
        <active>true</active>
        <description>Cannot create File Assignments until File Upload status is Complete</description>
        <errorConditionFormula>NOT(ISPICKVAL( Core_IPS_File_Upload_Master__r.Core_Upload_Status__c ,&quot;Complete&quot;))</errorConditionFormula>
        <errorMessage>File Upload Status needs to be Complete before the Supported Product/Account assignment process</errorMessage>
    </validationRules>
</CustomObject>